# template from https://gist.github.com/GhostofGoes/75051c4aeb215bc3cf48c10f5454b399

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]


[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "entropy_nlp"
version = "0.0.1"
description = "clinical nlp pipeline"
readme = "README.md"
requires-python = ">=3.9,<4.0"
# "LICENSE" is name of the license file, which must be in root of project folder
# license = {file = "LICENSE"}
authors = [
    {name = "Greg Karanikas"},
]



# Required dependencies for install/usage of your package or application
# If you don't have any dependencies, leave this section empty
# Format for dependency strings: https://peps.python.org/pep-0508/
dependencies = [
    # ... put stuff here ...
]

[project.scripts]
# Command line interface entrypoint scripts
# acme = "acme.__main__:main"

# Non-code data that should be included in the package source code
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[tool.setuptools.package-data]
#acme = ["*.xml"]

# Python modules and packages that are included in the
# distribution package (and therefore become importable)
[tool.setuptools.packages.find]
#exclude = ["tests", "tests.*", "examples"]